# dragon-tensor

./: .gitignore  .python-version  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  format.sh  pyproject.toml  requirements.txt  setup.py
docs/: DEVELOPMENT.md  README.md  api_cpp.md  optimizations.md  requirements_doc_0.1.md  requirements_doc_0.2.md
docs/api/: README.md  cpp_api_reference.md  python_api_reference.md
docs/design/: README.md  backend_abstraction.md  requirements_doc_0.3.md  uml_architecture.md
docs/performance/: optimizations.md
examples/: CMakeLists.txt  basic_example.cpp  basic_usage.py  financial_analysis.py  integration_examples.py
include/dragon_tensor/: allocator.h  backend.h  buffer.h  dtype.h  io.h  layout.h  shape.h  storage.h  tensor.h  tensor_impl.h  version.h.in
include/dragon_tensor/backends/: arrow_backend.h  memory_backend.h  mmap_backend.h  sharedmem_backend.h
include/dragon_tensor/interop/: arrow_interop.h  numpy_interop.h  torch_interop.h
include/dragon_tensor/utils/: logging.h
python/: bindings.cpp
python/dragon_tensor/: __init__.py  finance.py  io.py  shared.py  utils.py  wrapper.py
python/dragon_tensor/tests/: __init__.py  conftest.py  test_arrow_integration.py  test_basic_operations.py  test_finance.py  test_io.py  test_multiple_tensors.py  test_numpy_integration.py
scripts/: test_build.sh
src/: allocator.cpp  backend_factory.cpp  buffer.cpp  dummy.cpp  io.cpp  storage.cpp  tensor.cpp
src/backends/: arrow_backend.cpp  memory_backend.cpp  mmap_backend.cpp  sharedmem_backend.cpp
src/interop/: arrow_interop.cpp  numpy_interop.cpp  torch_interop.cpp
src/utils/: logging.cpp
