[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-tensor"
# Version is dynamically read from VERSION.txt in setup.py
# This value is kept for reference but will be overridden
version = "0.0.1"
description = "High-performance tensor library for financial data analysis"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Dragon Tensor Contributors" }
]
keywords = ["tensor", "finance", "quantitative", "numpy", "pytorch", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pybind11>=2.10.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
torch = ["torch>=1.9.0"]
arrow = ["pyarrow>=5.0.0"]
all = [
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "pyarrow>=5.0.0",
]

[tool.setuptools]
packages = ["dragon_tensor"]
exclude-package-data = {"*" = ["*.dylib"]}

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
dragon_tensor = ["*.txt", "*.so"]

