[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-tensor"
# Version is dynamically read from VERSION.txt in setup.py
# This value is kept for reference but will be overridden
version = "0.0.1"
description = "High-performance tensor library for financial data analysis"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "bermaker" },
    { email = "zhongchunyu@gmail.com" },
]
maintainers = [
    { name = "bermaker", email = "zhongchunyu@gmail.com" }
]
keywords = ["tensor", "finance", "quantitative", "numpy", "pytorch", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pybind11>=2.10.0",
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/zhongchun/dragon-tensor"

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
torch = ["torch>=1.9.0"]
arrow = ["pyarrow>=5.0.0"]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
all = [
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "pyarrow>=5.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["dragon_tensor"]
exclude-package-data = {"*" = ["*.dylib"]}

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
dragon_tensor = ["*.txt", "*.so"]

[tool.pytest.ini_options]
testpaths = ["python/dragon_tensor/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_pandas: marks tests that require pandas",
    "requires_torch: marks tests that require torch",
    "requires_arrow: marks tests that require pyarrow",
]

